fixed z-index

--- a/src/components/App/Animation/IntroAnimation/styles.module.css
+++ b/src/components/App/Animation/IntroAnimation/styles.module.css
@@ -5,7 +5,6 @@
     background-size: contain;
     background-position: right;
     height: 100vh;
-    position: relative;
 }
 
 .titleOne, .titleTwo, .titleThree, 
