--- a/src/components/App/Animation/styles.module.css
+++ b/src/components/App/Animation/styles.module.css
@@ -1,6 +1,6 @@
 .mainContainer{
     height: auto;
-    position: relative;
+
 }
 
 /* 
@@ -13,7 +13,7 @@
     object-fit: contain;
     width: 400px;
     position: fixed;
-    z-index: 2;
+    z-index: 1;
     top: 230px;
     left: 40%;
     border-radius: 20px;
